# short-fcfcpp-StaticVector

./: .gitignore  README.md  StaticVector.hpp
example/: CMakeLists.txt
example/libraries/fcfTest/: LICENSE  README.md  test.hpp
example/static-vector-speed/: static-vector-speed.cpp
example/static-vector-tests/: StaticVector.cpp  StaticVectorCopy.cpp  StaticVectorException.cpp  StaticVectorIterator.cpp  StaticVectorNotReduce.cpp  StaticVectorPush.cpp  static-vector-tests.cpp
